--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "mongoose": "^8.0.0",
+    "node-schedule": "^2.1.1",
     "socket.io": "^4.7.2",
     "speechmatics": "^3.1.2"
   }
